# QE_Suite

./: .gitignore  README.md  log  pyproject.toml  setup.cfg
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/CrBrS/: CrBrS.scf.in  main.py
examples/Pd2Se4/: Pd2Se4.uc  Pd2Se4.xyz  Pd2Se4_scf.py  QEsuite.bands  QEsuite.scf  main.py  out  scf.out
examples/SSSP/: README.md  versions.yaml
examples/convergence/: conv_test.py
examples/example1_raw_input/: graphene.scf.py  input_tmp.in  out  qe_suite.out
examples/example2_qesuite_input/: graphene.scf.py  qe_suite.out  qe_suite.xml
examples/example3_band_structure/: graphene.bands.py  qe_suite.bands.inp  qe_suite.scf.inp  read_xml.ipynb
examples/example4_relaxation/: graphene.relax.py  pwscf.bfgs  pwscf.update  qe_suite.relax.inp  qe_suite.scf.inp
examples/example5_symmetric/: .qe_suite.out.swp  graphene.relax.py  qe_suite.relax.inp
examples/example6_band_symmetric/: graphene.relax.py  qe_suite.bands.inp  qe_suite.relax.inp  read_xml.ipynb
examples/example7_assymetric_structure/: Pd2Se4_bands.py  (+5 more)
qe_suite/: __init__.py  builder.py  constants.py  format.py  io.py  symmetries.olds.py  symmetries.py
qe_suite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: __init__.py  cards.py  conv_test.py  format.py  io.py  io_test.py  main.py  namelists.py  proj_bands.ipynb  qe_io.py  qesuite.py  qetools.py  symmetries.py  test.py  wget-log  wget-log.1  wget-log.2
test/: CrBrS.scf.wfc10.0.in  Pd2Se4.uc  cell_analis.py  io_test.py  qe_conv.ipynb  template.CrBrS.scf.in
tools/: spg_hall_numbers.json
(+100 files in other folders)
