[metadata]
name = qe_suite
version = 0.0.1
author = Jose H. Garcia
author_email = josehugo.garcia@protonmail.com
description = A suite to simplify simulations using Quantum espresso
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josehgarciaa/QE_Suite
project_urls =
    Bug Tracker = https://github.com/josehgarciaa/QE_Suite/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src